# int2048-2023

./: CMakeLists.txt  README.md  int2048.h
data/Corner/: 1.cpp  1.out  2.cpp  2.out  3.cpp  3.out  4.cpp  5.cpp  5.out  6.cpp  6.out  7.cpp  7.out
data/Integer3/: 1.cpp  2.cpp  3.cpp  3.out
src/: int2048.cpp
